--- a/modules/example001/pom.xml
+++ b/modules/example001/pom.xml
@@ -10,7 +10,22 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>rapidpm-dynamic-cdi-examples-modules-example001</artifactId>
+
+
+
+
+
   <dependencies>
+
+
+    <dependency>
+      <groupId>org.rapidpm.dynamic-cdi</groupId>
+      <artifactId>rapidpm-dynamic-cdi</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
+
+  <!--using Annotation Processing-->
     <dependency>
       <groupId>org.rapidpm.proxybuilder</groupId>
       <artifactId>rapidpm-proxybuilder-modules-dynamicobjectadapter-generator-processors</artifactId>
@@ -22,6 +37,9 @@
       <version>0.0.2-SNAPSHOT</version>
       <optional>true</optional>
     </dependency>
+    <!--using Annotation Processing-->
+
+
   </dependencies>
 
 
