--- a/modules/example002/modules/pom.xml
+++ b/modules/example002/modules/pom.xml
@@ -3,17 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>rapidpm-dynamic-cdi-examples</artifactId>
+    <artifactId>rapidpm-dynamic-cdi-examples-modules-example002</artifactId>
     <groupId>org.rapidpm.dynamic-cdi</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>rapidpm-dynamic-cdi-examples-modules</artifactId>
+  <artifactId>rapidpm-dynamic-cdi-examples-modules-example002-modules</artifactId>
   <packaging>pom</packaging>
+
+
   <modules>
-    <module>example001</module>
-    <module>example002</module>
+    <module>vaadin</module>
+    <module>business</module>
   </modules>
 
 </project>
