added stagemonitor to the example

--- a/modules/example002/modules/vaadin/pom.xml
+++ b/modules/example002/modules/vaadin/pom.xml
@@ -57,6 +57,12 @@
 
     <!--added be Sven-->
     <dependency>
+      <groupId>org.stagemonitor</groupId>
+      <artifactId>stagemonitor-web</artifactId>
+      <version>0.16.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.rapidpm.dynamic-cdi</groupId>
       <artifactId>rapidpm-dynamic-cdi</artifactId>
       <version>1.0.0-SNAPSHOT</version>
