--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,23 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
-  <modules>
-    <module>modules</module>
-  </modules>
 
   <parent>
     <groupId>org.rapidpm</groupId>
     <artifactId>rapidpm-dependencies</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
-
 
   <groupId>org.rapidpm.dynamic-cdi</groupId>
   <artifactId>rapidpm-dynamic-cdi-examples</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
+
+  <packaging>pom</packaging>
+
+  <modules>
+    <module>modules</module>
+  </modules>
+
 
 
   <inceptionYear>2013</inceptionYear>
@@ -60,11 +62,10 @@
 
   <dependencies>
 
-    <!--<dependency>-->
-      <!--<groupId>org.rapidpm.proxybuilder</groupId>-->
-      <!--<artifactId>rapidpm-proxybuilder-modules-builder</artifactId>-->
-      <!--<version>0.0.2-SNAPSHOT</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.rapidpm.proxybuilder</groupId>
+      <artifactId>rapidpm-proxybuilder-modules-builder</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.reflections</groupId>
