--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>example001</module>
     <module>example002</module>
+    <module>example003</module>
   </modules>
 
 </project>
