--- a/modules/example002/pom.xml
+++ b/modules/example002/pom.xml
@@ -18,4 +18,28 @@
     <module>modules</module>
   </modules>
 
+
+  <dependencies>
+    <!--added be Sven-->
+    <dependency>
+      <groupId>org.rapidpm.dynamic-cdi</groupId>
+      <artifactId>rapidpm-dynamic-cdi</artifactId>
+    </dependency>
+    <!--using Annotation Processing-->
+    <dependency>
+      <groupId>org.rapidpm.proxybuilder</groupId>
+      <artifactId>rapidpm-proxybuilder-modules-dynamicobjectadapter-generator-processors</artifactId>
+
+    </dependency>
+    <dependency>
+      <groupId>org.rapidpm.proxybuilder</groupId>
+      <artifactId>rapidpm-proxybuilder-modules-dynamicobjectadapter-generator-annotations</artifactId>
+
+      <!--<optional>true</optional>-->
+    </dependency>
+    <!--using Annotation Processing-->
+
+  </dependencies>
+
+
 </project>
