checked (at)inject (at)proxy(virtual = true)  in combination with an DynamicObjectAdapterBuilder for interface only implementation (partial beans)

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -15,6 +15,7 @@
     <module>example001</module>
     <module>example002</module>
     <module>example003</module>
+    <module>example004</module>
   </modules>
 
 </project>
