--- a/modules/example002/modules/vaadin/pom.xml
+++ b/modules/example002/modules/vaadin/pom.xml
@@ -15,10 +15,6 @@
   <packaging>war</packaging>
 
   <properties>
-    <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-    <jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
-    <project.source.version>1.8</project.source.version>
-    <project.target.version>1.8</project.target.version>
     <project.encoding>UTF-8</project.encoding>
   </properties>
 
@@ -40,9 +36,7 @@
 
     <!-- Test dependencies -->
     <!--added be Sven-->
-
-
-
+    <!--Vaadin-->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
@@ -53,6 +47,20 @@
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin-server</artifactId>
       <version>${vaadin.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.vaadin.external.google</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.vaadin</groupId>
+          <artifactId>vaadin-sass-compiler</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.vaadin.external.flute</groupId>
+          <artifactId>flute</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.vaadin</groupId>
@@ -76,7 +84,6 @@
               <goal>add-test-source</goal>
             </goals>
             <configuration>
-
               <sources>
                 <source>${project.build.directory}/generated-sources/annotations</source>
               </sources>
@@ -84,7 +91,6 @@
           </execution>
         </executions>
       </plugin>
-
       <!--added by Sven-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -98,94 +104,26 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>com.vaadin</groupId>
-        <artifactId>vaadin-maven-plugin</artifactId>
-        <version>${vaadin.plugin.version}</version>
-        <configuration>
-          <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-          <webappDirectory>${basedir}/target/classes/VAADIN/widgetsets</webappDirectory>
-          <draftCompile>false</draftCompile>
-          <compileReport>false</compileReport>
-          <style>OBF</style>
-          <strict>true</strict>
-        </configuration>
+        <groupId>in.virit.vwscdn</groupId>
+        <artifactId>vwscdn-maven-plugin</artifactId>
+        <version>${vwscdn.version}</version>
         <executions>
           <execution>
+            <phase>generate-sources</phase>
             <goals>
-              <goal>update-widgetset</goal>
-              <goal>compile</goal>
-              <!-- disabled by default to use on-the-fly theme compilation -->
-              <!-- <goal>compile-theme</goal> -->
+              <goal>generate</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <!-- Clean up also any pre-compiled themes -->
-        <configuration>
-          <filesets>
-            <fileset>
-              <directory>src/main/webapp/VAADIN/themes</directory>
-              <includes>
-                <include>**/styles.css</include>
-                <include>**/styles.scss.cache</include>
-              </includes>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
-
-      <!-- The Jetty plugin allows us to easily test the development build by
-				running jetty:run on the command line. -->
-      <plugin>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-maven-plugin</artifactId>
-        <version>${jetty.plugin.version}</version>
-        <configuration>
-          <stopKey></stopKey>
-          <scanIntervalSeconds>2</scanIntervalSeconds>
-          <stopPort/>
-        </configuration>
-      </plugin>
     </plugins>
-
-    <pluginManagement>
-      <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        <!-- TODO Remove when http://dev.vaadin.com/ticket/14924 is resolved -->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>com.vaadin</groupId>
-                    <artifactId>
-                      vaadin-maven-plugin
-                    </artifactId>
-                    <versionRange>[7.1.11,)</versionRange>
-                    <goals>
-                      <goal>resources</goal>
-                      <goal>update-widgetset</goal>
-                      <goal>compile</goal>
-                      <goal>compile-theme</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-
   </build>
+
+  <repositories>
+    <repository>
+      <id>vaadin-addons</id>
+      <url>http://maven.vaadin.com/vaadin-addons</url>
+    </repository>
+  </repositories>
+
 </project>
