--- a/modules/example002/modules/vaadin/pom.xml
+++ b/modules/example002/modules/vaadin/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.rapidpm.dynamic-cdi</groupId>
     <artifactId>rapidpm-dynamic-cdi-examples-modules-example002-modules</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>rapidpm-dynamic-cdi-examples-modules-example002-modules-vaadin</artifactId>
