--- a/modules/example001/pom.xml
+++ b/modules/example001/pom.xml
@@ -5,8 +5,7 @@
   <parent>
     <artifactId>rapidpm-dynamic-cdi-examples-modules</artifactId>
     <groupId>org.rapidpm.dynamic-cdi</groupId>
-    <version>0.0.6</version>
-
+    <version>0.0.7-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
