--- a/modules/example001/pom.xml
+++ b/modules/example001/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <artifactId>rapidpm-dynamic-cdi-examples-modules</artifactId>
     <groupId>org.rapidpm.dynamic-cdi</groupId>
-    <version>0.0.7</version>
+    <version>0.1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
