--- a/modules/example002/modules/vaadin/pom.xml
+++ b/modules/example002/modules/vaadin/pom.xml
@@ -123,6 +123,10 @@
       <plugin>
         <groupId>com.vaadin.wscdn</groupId>
         <artifactId>wscdn-maven-plugin</artifactId>
+        <configuration>
+          <downloadedDirectory>target/classes/VAADIN/widgetsets</downloadedDirectory>
+          <download>true</download>
+        </configuration>
         <executions>
           <execution>
             <phase>generate-sources</phase>
