--- a/modules/example002/modules/vaadin/pom.xml
+++ b/modules/example002/modules/vaadin/pom.xml
@@ -84,6 +84,16 @@
       <artifactId>vaadin-themes</artifactId>
       <version>${vaadin.version}</version>
     </dependency>
+    <dependency>
+      <groupId>in.virit.vwscdn</groupId>
+      <artifactId>vwscdn-client</artifactId>
+      <version>1.3.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.vaadin</groupId>
+      <artifactId>vaadin-client</artifactId>
+      <version>${vaadin.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
