--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>org.rapidpm</groupId>
     <artifactId>rapidpm-dependencies</artifactId>
-    <version>3.0.6-SNAPSHOT</version>
+    <version>3.1.0</version>
   </parent>
 
   <groupId>org.rapidpm.dynamic-cdi</groupId>
